      which can modify the interactive flag in the child process. The
      new default is \code{FALSE} which makes child processes
      non-interactive by default (this prevents lock-ups due to children
      waiting for interactive input).
      
      \item \code{scan()} now warns when end-of-file occurs within
      a quoted string.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD config} now make use of personal
      \file{Makevars} files under \file{~/.R}, in the same way as
      \command{R CMD SHLIB} and \command{R CMD INSTALL}.  This makes the
      utility more useful in package \command{configure} scripts.

      On Windows this may require the environment variable \env{HOME} set.

      The old behaviour can be obtained with the new option
      \option{--no-personal}.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{sys.source()} did not report error locations when
      \code{keep.source = TRUE}.

      \item \code{as.POSIXct.numeric} was coercing \code{origin} using
      the \code{tz} argument and not \code{"GMT"} as documented
      (\PR{14973}).

      \item \code{str(d)} no longer gives an error when \code{names(d)}
      contain illegal multibyte strings (\PR{15247}).
      
      \item Profiling of built-in functions with \code{line.profiling=
      TRUE} did not record the line from which they were called.      
      
      \item \code{citation(pkg)} dropped the header and footer specified
      in the \file{CITATION} file (\PR{15257}).
      
      \item Quotes were handled differently when reading the first
      line and reading the rest, so \code{read.table()} misread files
      that contained quote characters (\PR{15245})
    }
  }
}

\section{\Rlogo CHANGES IN R 3.0.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item Packages need to be (re-)installed under this version
      (3.0.0) of \R.
